# serprog-rs

./: README.md
examples/arduino-uno/: Cargo.toml  README.md  Ravedude.toml
examples/arduino-uno/src/: main.rs  serprog.rs
examples/ch32v003/: Cargo.toml  README.md  rust-toolchain.toml
examples/ch32v003/.cargo/: config.toml
examples/ch32v003/src/: main.rs
examples/esp32-generic/: Cargo.toml  README.md
examples/raspi-pico2/: Cargo.toml  README.md  build.rs
examples/raspi-pico2/.cargo/: config.toml
examples/raspi-pico2/src/: main.rs
examples/stm32-bluepill/: .gitignore  Cargo.toml  README.md
examples/stm32-bluepill/src/: main.rs  serprog.rs
serprog/: Cargo.toml  INDEX.md
serprog-test/: Cargo.toml  README.md
serprog-test/.cargo/: config.toml
serprog-test/src/: main.rs
serprog/.cargo/: config.toml
serprog/examples/arduino-uno/: Ravedude.toml
serprog/src/: lib.rs
src/: main.rs  serprog.rs
