[package]
name = "hello-arduino-hal"
version = "0.1.0"
authors = ["Han Wu <wuhanstudios@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
panic-halt = "1.0.0"
embedded-hal = "1.0"
nb = "1.1.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-uno"]

[dependencies.serprog]
path = "../../serprog"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1
