[package]
name = "ch32v003"
version = "0.1.0"
edition = "2024"

[dependencies]

embedded-hal = "1.0.0"
panic-halt = "1.0.0"
qingke-rt = "0.7.0"
[dependencies.ch32-hal]
git = "https://github.com/ch32-rs/ch32-hal"
features = [
    "ch32v003f4u6",
    "memory-x",
    # "embassy",
    # "time-driver-tim2",
    "rt",
]

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
